--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
         "fix:eslint": "eslint --ext .js,.vue resources/js/ --fix"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.6",
         "@vitejs/plugin-vue": "^4.2.3",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "eslint": "^8.41.0",
         "eslint-plugin-vue": "^9.13.0",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.0.0",
         "vue": "^3.3.2"
     },
